# Dockerized-flask-blog

./: LICENSE  README.md  pyproject.toml
flask_folder/: Dockerfile  flask_new_file.txt  flaskblog.py  requirements.txt
