[tool.poetry]
name = "flask-folder"
version = "0.1.0"
description = ""
authors = ["Amna Rahman <amnarahman00@gmail.com>"]
readme = "README.md"
packages = [{include = "flask_folder"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
